# xorq

./: .codespell.ignore-words  .commitlintrc.json  .envrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore.template  .pre-commit-config.yaml  .vale.ini  AGENT_IMPROVEMENTS.md  AGENT_QUICK_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LINTING.md  README.md  STYLEGUIDE.md  codecov.yml  compose.yaml  dispatch_demo.py  draft.py  expr.py  flake.nix  justfile  pyproject.toml  repro_1831.py  requirements-dev.txt  rust-toolchain.toml  test_expr.py
.claude/: CLAUDE.md  settings.json
.claude/skills/: xorq-style.md
.devcontainer/: .dockerignore  Dockerfile  README.md  audit-hook  audit-report.py  devcontainer.json  docker-compose.yml  setup-claude.py  setup-env.sh
.devcontainer/lib/: git.sh  host-bridge.sh  host-mounts.sh  list-file.sh
.devcontainer/project/: audit-prefixes.txt  compose.override.yml  external-volumes.txt  host-mounts.txt  install-system.sh  project.env.example  setup-env.sh  worktree-copies.txt  worktree-symlinks.txt
.envrcs/: .envrc.nix-config  .envrc.secrets.template  .envrc.sops  .envrc.user.editable  .envrc.user.flake  .envrc.user.template  .envrc.user.uv  README.md
.github/: actionlint.yaml  release-drafter.yml  renovate.json
.github/workflows/: ci-benchmark.yml  ci-codspeed.yaml  ci-docs-deploy.yml  ci-docs-lint.yml  ci-docs-preview.yml  ci-downstream-bsl.yml  ci-lint-commit-message.yml  ci-lint.yml  ci-pre-release.yml  ci-publish.yml  ci-release.yml  ci-test-bigquery.yml  ci-test-catalog.yml  ci-test-complex.yml  ci-test-config.yml  ci-test-core.yml  ci-test-databricks.yml  ci-test-examples.yml  ci-test-gcs.yml  ci-test-ibis-compatibility.yml  ci-test-install.yaml  ci-test-library.yml  ci-test-lowest-direct.yml  ci-test-s3.yml  ci-test-sklearn-template.yml  ci-test-slow.yml  ci-test-snowflake.yml  ci-test-templates.yml  ci-test.yml  detect-changes.yml  release-drafter.yml
db/: datafusion.sql  postgres.sql
dev/: cleanup-worktree  devcontainer  devcontainer-completions  new-worktree  project.env  project.env.example  setup-worktree
dev/bench/: data.js
dev/hooks/: post-checkout
docker/minio/: config.json
docker/otel/: otel-collector-config.yaml
docker/postgres/: Dockerfile
docker/trino/: hive.properties  jvm.config
docs/: .gitignore  .vale.ini  LINTING.md  _fix_links.py  _publish.yml  _quarto.yml  _redirects  _renderer.py  _supported.py  bank-marketing.mdx  cli_contract.py  concepts.qmd  conftest.py  core_concepts.mdx  development.mdx  docs.json  faq.qmd  generate_cli_reference.py  generate_llms_txt.py  index.qmd  installation.qmd  lint.sh  overview.mdx  quick-start.qmd  release_notes.qmd  sklearn_interop_design.md  styles.css  test_cli_contract.py  tutorial.qmd
docs/adr/: 0001-git-annex-over-git-lfs.md  0002-normalize-sequential-ids-in-build.md  0003-isolated-cursors-for-duckdb-into-backend.md  0003-optional-git-annex-backend.md  0004-uv-as-sole-packaging-and-execution-runtime.md  0005-expr-builder-from-tagged-registry.md  0006-otel-collector-probe.md  0006-read-kwargs-hash-path-read-path-split.md  0007-datafusion-plan-path-canonicalization.md  0008-wheel-based-packaging-pipeline.md  0009-bucket-fileprefix-name-uuid-namespace.md  0009-catalog-single-git-remote.md  0009-dask-tokenize-refactoring.md  0009-split-normalize-op-data-from-structure.md  0010-split-normalize-op-data-from-structure.md  0011-catalog-single-git-remote.md  0012-click-option-decorators-and-runner-hierarchy.md  0013-batchcorder-stream-cache-for-remote-table-fan-out.md  0014-sinknode-deferred-sinks.md  0014-teenode-deferred-sinks.md  0014-teenode-deferred-writes.md  0015-build-hash-cache-hash-split.md  0016-build-artifacts-are-credential-free.md  0016-rebuildable-protocol.md  0017-incremental-wap-publish.md  template.md
docs/agent_prompts/: README.md  llm_object_guide.md  package_exploration_guide.md  planning_phase.md  sequential_execution.md  xorq_vendor_ibis.md
docs/agentic_workflows/: build_your_own_agent.qmd  faa_semantic_layer.qmd  index.qmd  mcp_for_analysts.qmd
docs/api/: _utils.py  let.qmd
docs/api-reference/: expression-relations.mdx  profiles-api.mdx  profiles.mdx
docs/api_reference/: cache_api_overview.qmd  caching_classes.qmd  expression_format.qmd
docs/claude/: index.qmd
docs/concepts/: index.qmd
docs/contributors/: code_guidelines.qmd  documentation_guidelines.qmd  getting_started.qmd  testing.qmd
docs/core_concepts/: build.mdx  build.qmd  (+12 more)
env-templates/: .env.aws.template
examples/: README.md  as_struct_pattern.py  bank_marketing.py  baseball_breakout_predictor.py  catalog_usage.py  combined_example.py  combined_example_client.py  combined_example_server.py  complex_cached_expr.py  compose_unbound_with_source.py  custom_builder_example.py  databricks_into_backend_example.py  deeply_nested_pipeline.py  deferred_fit_predict_example.py  deferred_fit_transform_example.py  deferred_fit_transform_predict_example.py  deferred_read_csv.py  demonstrate_ir_two_categorical.py  diamonds_price_prediction.py  duck_client.py  duck_client_reader.py  duck_client_writer.py  duck_server.py  duckdb_flight_example.py  example_run.sh  expr_flight_cache.py  expr_hybrid_cache.py  expr_scalar_udf.py  feature-utils-on-driver.py  fitted_pipeline_builder_example.py  flight_dummy_exchanger.py  flight_exchange_example.py  flight_multi_duckdb.py  flight_serve_model.py  flight_udtf_example.py  flight_udtf_llm_example.py  gcstorage_example.py  gizmosql_demo.py  hackernews_lib.py  hn_quickstart.py  (+58 more)
nix/: commands.nix  crate-wheel.nix  letsql.nix  nix.conf  readEnv.nix  xorq.nix
notebooks/: pipeline.ipynb
schemas/: catalog.schema.json
scripts/: catalog_plot_seed.py  diamonds_mispricing_simple.py  fitted_rebuild_repro.py  generate_release_notes.py  visualize_mispricing.py
skills/: penguins_demo.py
src/: context.rs  dataframe.rs  errors.rs  expr.rs  ibis_filter_expression.rs  lib.rs  pyarrow_filter_expression.rs  udwf.rs
xorq/: api.py  cli.py  config.py  conftest.py  ml.py
xorq-template/: PRIME.md.template
(+1149 files in other folders)
