[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["python"]

[tool.hatch.build.targets.sdist]
only-include = ["python"]

[project]
name = "xorq"
version = "0.2.4"
dependencies = [
    "dask==2025.1.0; python_version >= '3.10' and python_version < '4.0'",
    "attrs>=24.0.0,<26; python_version >= '3.10' and python_version < '4.0'",
    "pyarrow>=13.0.0,<21; python_version >= '3.10' and python_version < '4.0'",
    "structlog>=24.2.0,<26; python_version >= '3.10' and python_version < '4.0'",
    "pytest-mock>=3.14.0,<4 ; python_version >= '3.10' and python_version < '4.0'",
    "cityhash>=0.4.7,<1 ; python_version >= '3.10' and python_version < '4.0'",
    "pandas>=1.5.3,<3 ; python_version >= '3.10' and python_version < '4.0'",
    "pyarrow-hotfix>=0.4,<1 ; python_version >= '3.10' and python_version < '4.0'",
    "geoarrow-types>=0.2,<1 ; python_version >= '3.10' and python_version < '4.0'",
    "pythran>=0.17.0 ; sys_platform == 'darwin'",
    "atpublic>=5.1",
    "parsy>=2",
    "python-dateutil>=2.8.2",
    "pytz>=2022.7",
    "sqlglot==25.20.2",
    "toolz>=0.11",
    "typing-extensions>=4.3.0",
    "pyyaml>=6.0.2",
    "cloudpickle>=3.1.1",
    "envyaml>=1.10.211231",
    "xorq-datafusion==0.2.3",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-exporter-prometheus>=0.55b1",
    "prometheus-client>=0.22.1",
]
requires-python = ">=3.10"
authors = [
    { name = "Hussain Sultan", email = "hussain@letsql.com" },
]
maintainers = [
    { name = "Dan Lovell", email = "dan@letsql.com" },
    { name = "Daniel Mesejo", email = "mesejo@letsql.com" },
]
description = "Data processing library built on top of Ibis and DataFusion to write multi-engine data workflows."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Database :: Database Engines/Servers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Homepage = "https://www.letsql.com/"
Repository = "https://github.com/letsql/xorq.git"
Issues = "https://github.com/letsql/xorq/issues"
Changelog = "https://github.com/letsql/xorq/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pyiceberg = [
    "pyiceberg[sql-sqlite,sql-postgres]>=0.9.0",
]
duckdb = [
    "duckdb>=1.1.3",
]
datafusion = [
    "datafusion>=0.6,<48; python_version >= '3.10' and python_version < '4.0'"
]
snowflake = [
    "adbc-driver-snowflake>=1.5.0",
    "snowflake-connector-python>=3.10.1,<4 ; python_version >= '3.10' and python_version < '4.0'",
]
quickgrove = [
    "quickgrove>=0.1.2",
]
examples = [
    "fsspec>=2024.6.1,<2025.5.2; python_version >= '3.10' and python_version < '4.0'",
    "pins[gcs]>=0.8.3,<1 ; python_version >= '3.10' and python_version < '4.0'",
    "xgboost >=1.6.1 ; python_version >= '3.10' and python_version < '4.0'",
    "duckdb >=0.10.3,<2 ; python_version >= '3.10' and python_version < '4.0'",
    "quickgrove>=0.1.2",
    "scikit-learn<2.0.0,>=1.4.0",
    "openai>=1.65.4",
    "adbc-driver-postgresql>=1.4.0",
    "psycopg2-binary>=2.9.10",
    "mcp>=1.5.0",
    "requests>=2.32.3",
    "cryptography>=45.0.3",
    "xorq-feature-utils",
    "xorq-weather-lib",
]
postgres = [
    "adbc-driver-postgresql>=1.4.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "blackdoc==0.4.1",
    "codespell[hard-encoding-detection,toml]==2.4.1",
    "coverage[toml]==7.9.1",
    "git-cliff<3.0.0,>=2.2.1",
    "ipython<9.5.0,>=8.19.0",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "ruff==0.12.1",
    "trino==0.335.0",
    "pytest-codspeed<4.0.0,>=3.0.0",
    "pip>=24.3.1",
    "quickgrove>=0.1.2",
    "vendoring>=1.2.0",
]
test = [
    "datafusion>=43.1.0",
    "duckdb>=1.1.3",
    "pyopenssl>=24.3.0",
    "pytest-snapshot<1.0.0,>=0.9.0",
    "scikit-learn<2.0.0,>=1.4.0",
    "xgboost>=1.6.1",
    "quickgrove>=0.1.2",
]
docs = [
    "quartodoc<0.11.2,>=0.7.2",
    "nbformat<6.0.0,>=5.10.4",
    "nbclient<1.0.0,>=0.10.0",
    "ipykernel<7.0.0,>=6.29.4",
    "notebook>=7.3.2",
    "ibis-framework>=10.5.0",
]

[project.entry-points."xorq.backends"]
let = "xorq.backends.let"
postgres = "xorq.backends.postgres"
snowflake = "xorq.backends.snowflake"
datafusion = "xorq.backends.datafusion"
duckdb = "xorq.backends.duckdb"
pandas = "xorq.backends.pandas"
trino = "xorq.backends.trino"
pyiceberg = "xorq.backends.pyiceberg"

[project.scripts]
xorq = "xorq.cli:main"

[tool.vendoring]
destination = "python/xorq/vendor/"
requirements = "vendors.txt"
namespace = "xorq.vendor"

protected-files = ["__init__.py", "README.md", "vendors.txt"]
patches-dir = "tasks/patches"

[tool.vendoring.transformations]
substitute = [
    {match = '__import__("ibis")', replace = '__import__("xorq.vendor.ibis")'}
]
drop = [
    "bin/",
    "*.so",
    "typing.*",
    "*/tests/"
]

[tool.ruff.lint]
extend-select = ["I", "ICN"]

[tool.ruff.lint.per-file-ignores]
"python/xorq/__init__.py" = ["I001"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"xorq" = "xo"

[tool.ruff.lint.isort]
known-first-party = ["xorq"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.codespell]
skip = "*.lock,.direnv,.git,docs/_freeze/**/html.json"
ignore-regex = '\b(DOUB|i[if]f|I[IF]F|lamduh|AFE|crate|ba)\b'
builtin = "clear,rare,names"

[tool.pytest.ini_options]
filterwarnings = [
    # pandas 2.2 warnings
    'ignore:DataFrameGroupBy\.apply operated on the grouping columns\. This behavior is deprecated:DeprecationWarning',
    'ignore:Downcasting object dtype arrays on \.fillna, \.ffill, \.bfill is deprecated:FutureWarning',
    # pandas 2.2 warnings coming directly from the way flink uses pandas
    "ignore:Passing a BlockManager to DataFrame is deprecated:DeprecationWarning",
    "ignore:.+ /workspace/src/objective/regression_obj.cu:UserWarning"
]
markers = [
    "snowflake",
    "library",
    "s3",
    "gcs",
    "snapshot_check",
]
consider_namespace_packages = true
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"


[tool.git-cliff.changelog]
header = """
# Changelog\n
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
"""
# template for the changelog body
# https://keats.github.io/tera/docs/#introduction
body = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% if version -%}
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
    ## [Unreleased]
{% endif -%}

### Details\

{% for group, commits in commits | group_by(attribute="group") %}
    #### {{ group | upper_first }}
    {%- for commit in commits %}
        - {{ commit.message | upper_first | trim }}\
            {% if commit.github.username %} by @{{ commit.github.username }}{%- endif -%}
            {% if commit.github.pr_number %} in \
              [#{{ commit.github.pr_number }}]({{ self::remote_url() }}/pull/{{ commit.github.pr_number }}) \
            {%- endif -%}
    {% endfor %}
{% endfor %}

{%- if github.contributors | filter(attribute="is_first_time", value=true) | length != 0 %}
  ## New Contributors
{%- endif -%}

{% for contributor in github.contributors | filter(attribute="is_first_time", value=true) %}
  * @{{ contributor.username }} made their first contribution
    {%- if contributor.pr_number %} in \
      [#{{ contributor.pr_number }}]({{ self::remote_url() }}/pull/{{ contributor.pr_number }}) \
    {%- endif %}
{%- endfor %}\n
"""
trim = true


[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_preprocessors = [
    { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
]
commit_parsers = [
    { message = "^.*: add", group = "Added" },
    { message = "^.*: support", group = "Added" },
    { message = "^.*: remove", group = "Removed" },
    { message = "^.*: delete", group = "Removed" },
    { message = "^test", group = "Fixed" },
    { message = "^fix", group = "Fixed" },
    { message = "^.*: fix", group = "Fixed" },
    { message = "^.*", group = "Changed" },
]
protect_breaking_commits = false
filter_commits = true
tag_pattern = "v[0-9].*"
topo_order = false
sort_commits = "oldest"

[tool.uv.sources]
hash-cache = { git = "https://github.com/xorq-labs/hash-cache", branch = "feat/ttl" }
xorq-weather-lib = { git = "https://github.com/xorq-labs/xorq-weather-lib", branch = "main" }
xorq-feature-utils = { git = "https://github.com/xorq-labs/xorq-feature-utils", branch = "main" }

[tool.hatch.metadata]
allow-direct-references = true
